# alio

./: .gitignore  CMakeLists.txt  Makefile  aio.cfg  aio.xml  alio.xml  main.cpp  readme
client/: CMakeLists.txt  Makefile  base_file_object.hpp  buffered.cpp  buffered.hpp  config.cpp  config.hpp  debug_file_object_decorator.hpp  file_object.hpp  file_object_info.cpp  file_object_info.hpp  i_file_object.hpp  i_file_object_decorator.hpp  init.cpp  mirror.hpp  null_file_object.hpp  remote.cpp  remote.hpp  request.cpp  request.hpp  standard_file_object.cpp  standard_file_object.hpp  timer.hpp  timer_data.hpp  timer_file_object_decorator.cpp  timer_file_object_decorator.hpp  timer_manager.cpp  timer_manager.hpp  wrapper.cpp  xx
ide/aio/: aio.sln
ide/aio/aio/: aio.vcproj
server/: CMakeLists.txt  Makefile  main.cpp  server.cpp  server.hpp
tools/: CMakeLists.txt  Makefile  comm_header.hpp  i_communication.hpp  message.cpp  message.hpp  mpi_communication.cpp  mpi_communication.hpp  os.cpp  os.hpp  string_utils.cpp  string_utils.hpp
xml/: CMakeLists.txt  Makefile  xml_node.cpp  xml_node.hpp
